[kyo-kernel2] suspendWith: the suspension is its own continuation
Kyo and Suspend become traits so a suspension can mix in
Arrow.Transform, and suspendWith mints one node that is both: cont
returns this, and the transform's apply carries the inlined
continuation body. The dominant suspend-then-map pattern drops from
three objects to one.

Measured (3 forks, gc profiler, default flags): suspendWithOps runs
53.4us and 24 bytes per suspension against effectOps at 93.7us and 56,
a 43 percent time and 57 percent allocation reduction, well under the
old kernels' 40 bytes. The trait hierarchy measures at parity or
better across the family: contextOps 82.3 vs 100.8us and stabilized,
crossedOps 360.7 vs 443.0us, stateOps 99.3 vs 105.4us, fused and
attached rows identical. The one cost is the legacy suspend-plus-map
path through handle, now bimodal (122.6 mean vs 93.7us) because the
answer closure's escape analysis depends on inlining an interface call
to cont; hot paths migrate to suspendWith. The Arrow-side trait
variant was measured first and rejected: interface dispatch on the
arrow hierarchy cost 84 percent on effectOps.

Also: Jmh javaOptions drop UseCompactObjectHeaders, which benchmarks
inherited from Test through kyo-settings; canonical numbers use
default flags.

Verified: 63/63 tests green including the self-continuation identity,
deep recursion, and a million-map tower on the fused node.